# HOPE

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  README.md  create_dir.sh  example.cpp  generate_result.py  instructions.txt  plot.sh  run_experiments.sh
ART/bench/: CMakeLists.txt  bench_art.cpp  workload_art.cpp
ART/include/: N.h  Tree.h
ART/src/: Epoche.cpp  N.cpp  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp
ART/test/: CMakeLists.txt  test_art.cpp
ART_DIC/include/: N_ArtDic.h  Tree_ArtDic.h
ART_DIC/src/: N16_ArtDic.cpp  N256_ArtDic.cpp  N48_ArtDic.cpp  N4_ArtDic.cpp  N_ArtDic.cpp  Tree_ArtDic.cpp
ART_DIC/test/: CMakeLists.txt  test_tree.cpp
ART_single/bench/: .bench_art_tune.cpp.swp  CMakeLists.txt  bench_art.cpp  test_art.cpp
ART_single/include/: N.h  Tree.h
ART_single/src/: N.cpp  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp
ART_single/test/: CMakeLists.txt  test_art.cpp
Compressed-B-Tree/: CPSBTreeTest.cpp  bench_cpsbtree.cpp  bench_victorbtree.cpp
Compressed-B-Tree/include/: BTreeOLC.h  CPSBTreeOLC_Op.h  CPSBTreeOLC_Op.hpp
Compressed-B-Tree/include/tlx/: btree.hpp  btree_map.hpp  core.cpp  core.hpp
PrefixBTree/: CMakeLists.txt  CPSBTreeTest.cpp  bench_cpsbtree.cpp  bench_victorbtree.cpp
PrefixBTree/bench/: CMakeLists.txt  bench_prefix_btree.cpp
PrefixBTree/include/: BTreeOLC.h  CPSBTreeOLC_Op.h  PrefixBtree.h
PrefixBTree/include/tlx/: btree.hpp  btree_map.hpp  core.cpp  core.hpp
PrefixBTree/test/: CMakeLists.txt  test_prefixbtree.cpp
SuRF/bench/: CMakeLists.txt  bench_surf.cpp  workload.cpp
SuRF/include/: config.hpp  surf.hpp  surf_builder.hpp
SuRF/test/: CMakeLists.txt  test_surf.cpp
bench/: CMakeLists.txt  bench.cpp  microbench.cpp  parameters.h
btree/: CMakeLists.txt  bench_btree.cpp  workload_btree.cpp
btree/include/: btree.hpp  btree_map.hpp  core.hpp
build_support/: cpplint.py  run_clang_format.py
datasets/: urls.txt  wikis.txt
hot/: .gitignore  .gitmodules  CMakeLists.txt  bench_hot.cpp  test_hot.cpp
include/: code_assigner.hpp  code_generator.hpp  common.hpp  dictionary.hpp  encoder.hpp  symbol_selector.hpp
include/art_dic/: art_dic_N.hpp  art_dic_tree.hpp
include/art_dic_new/: art_dic_N.hpp  art_dic_tree.hpp  out
include/code_assigners/: code_assigner_factory.hpp  fixed_len_dict_ca.hpp  hu_tucker_ca.hpp
include/code_generators/: code_generator_factory.hpp  fixed_len_dict_cg.hpp  hu_tucker_cg.hpp
include/dictionaries/: array_3gram_dict.hpp  array_4gram_dict.hpp  array_dict.hpp  dictionary_factory.hpp  trie_3gram_dict.hpp  trie_4gram_dict.hpp  trie_art_dict.hpp
include/encoders/: ALMImproved_encoder.hpp  ALM_encoder.hpp  double_char_encoder.hpp  encoder_factory.hpp  heuristic_encoder.hpp  ngram_encoder.hpp  single_char_encoder.hpp
include/hash_decoder/: hash_dict_.hpp
include/succinct_binary_trie/: rank_bitvector.hpp  sbt.hpp
include/symbol_selectors/: ALMImproved_ss.hpp  ALM_ss.hpp  blending_trie.hpp  blending_trie_equal.hpp  double_char_ss.hpp  heuristic_ss.hpp  ngram_ss.hpp  single_char_ss.hpp  symbol_selector_factory.hpp
plot/: option.py
plot/ART/point/: .height_email_art.py.swp  height_email_art.py  height_url_art.py  height_wiki_art.py  insertlat_mem_email_art.py  insertlat_mem_url_art.py  insertlat_mem_wiki_art.py  lat_mem_email_art.py  lat_mem_ts_art.py  lat_mem_url_art.py  lat_mem_wiki_art.py  lookuplat_mem_email_art.py  lookuplat_mem_url_art.py  lookuplat_mem_wiki_art.py  mem_email_art.py  mem_url_art.py  mem_wiki_art.py  stats_email_art.py  stats_url_art.py  stats_wiki_art.py
plot/ART/range/: insertlat_mem_email_art.py  lat_email.py  lat_mem_email_art.py  lat_mem_ts_art.py  lat_mem_url_art.py  lat_mem_wiki_art.py  lat_url.py  lat_wiki.py
plot/ART_single/point/: height_email_art.py  height_ts_art.py  height_wiki_art.py  insertlat_mem_email_art.py  insertlat_mem_ts_art.py  insertlat_mem_url_art.py  insertlat_mem_wiki_art.py  lookuplat_mem_email_art.py  lookuplat_mem_ts_art.py  lookuplat_mem_url_art.py  lookuplat_mem_wiki_art.py  mem_email_art.py
plot/ART_single/range/: insertlat_mem_ts_art.py  insertlat_mem_url_art.py  insertlat_mem_wiki_art.py  lookuplat_mem_email_art.py  lookuplat_mem_ts_art.py  lookuplat_mem_url_art.py  lookuplat_mem_wiki_art.py
plot/SuRF/point/: fpr_email_surf.py  fpr_url_surf.py  fpr_wiki_surf.py  fprcompare_email_surf.py  height_email_surf.py  height_ts_surf.py  height_url_surf.py  height_wiki_surf.py  lat_mem_email_surf.py  lat_mem_ts_surf.py  lat_mem_url_surf.py  lat_mem_wiki_surf.py  mem_email_surf.py  mem_url_surf.py  mem_wiki_surf.py  stats_email_surf.py
plot/SuRF/range/: fpr_email_surf.py  fpr_url_surf.py  fpr_wiki_surf.py  lat_email.py  lat_email_surf.py  lat_mem_email_surf.py  lat_mem_ts_surf.py  lat_mem_url_surf.py  lat_mem_wiki_surf.py  lat_url.py  lat_url_surf.py  lat_wiki.py  lat_wiki_surf.py
plot/SuRF_real/point/: lat_mem_email_surfreal.py  lat_mem_url_surfreal.py  lat_mem_wiki_surfreal.py
plot/SuRF_real/range/: lat_mem_email_surfreal.py  lat_mem_url_surfreal.py  lat_mem_wiki_surfreal.py
plot/btree/point/: insertlat_mem_email_btree.py  insertlat_mem_ts_btree.py  insertlat_mem_url_btree.py  insertlat_mem_wiki_btree.py  lat_mem_email_btree.py  lat_mem_ts_btree.py  lat_mem_url_btree.py  lat_mem_wiki_btree.py  lookuplat_mem_email_btree.py  (+3 more)
scripts/: create_dir.sh  generate_result.py  plot.sh  run_experiments.sh
test/: CMakeLists.txt  test_alm_encoder.cpp  test_almimproved_encoder.cpp  test_array_3gram_dict.cpp  test_array_4gram_dict.cpp  test_artdic.cpp  test_artdic_node.cpp  test_blend_trie.cpp  test_double_char_encoder.cpp  test_heuristic_encoder.cpp  test_heuristic_ss.cpp  test_hu_tucker_cg.cpp  test_ngram_encoder.cpp  test_ngram_ss.cpp  test_single_char_encoder.cpp  test_trie_art_dict.hpp
workload_gen/: gen_load.py  gen_txn.py  gen_txn_scan_len.py  gen_workload.sh  ycsb_download.sh
workload_gen/workload_spec/: workloadc_url_uniform  workloadc_url_zipfian  workloadc_wiki_uniform  workloadc_wiki_zipfian  workloade_url_zipfian  workloade_wiki_zipfian
(+276 files in other folders)
